/*
 * $Id: ChangeLog,v 1.2025 2004/01/09 18:51:24 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-09 21:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/what32/include/wintypes.ch
    + Added few missing types.

  * include/cstruct.ch
  * source/rtl/cstruct.prg
    * Improved to allow a Structure Tag to be used in Structure Definitions.
    * Improved to allow a Structure Synonyms to be used in Structure Definitions.
    * Improved to allow astruct prefix to the Tag Name to be used in Structure Definitions.
    + Added support for LONGLONG and ULONGLONG
      /* Now practically full C syntax is supported */

  * include/hberrors.h
  * source/pp/ppcore.c
    * Changed cMarkerCount and cGroupCount to unsigned char
    + Added logic to detect too many instanciations and generate an Error instead of GPF.

2004-01-09 16:50 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * utils/hbmake/hbmake.prg
    ! added support for gtwvt/xwt as grafical

2004-01-09 09:33 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwvt/gtwvt.c
    * updated tone handling to be consistant with gtwin

2004-01-09 09:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * bin/bld.bat
    * corrected compiler checking
    * updated msvc section for gtwvt support

2004-01-09 00:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbgtwvt.h
    * Minor MSVC correction

2004-01-08 14:15 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
   * xharbour/source/rtl/gtwvt/gtwvt.c
     + Wvt_DrawBoxGroupRaised( nTop, nLeft, nBottom, nRight )
     ! Wvt_SetMouseMove( lSetMove )
       Now the function returns the previous state of mouse movement set flag.

2004-01-07 15:10 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
   * source/rtl/gtwvt/gtwvt.c